Cleaned up some things, modified tests, added confirmation for sending the emails.